--- a/MybatisTemplateSpringDemo/pom.xml
+++ b/MybatisTemplateSpringDemo/pom.xml
@@ -59,7 +59,12 @@
             <artifactId>mybatis-template-core</artifactId>
             <version>0.0.1</version>
             <scope>system</scope>
-            <systemPath>${basedir}/../MybatisTemplate/target/mybatis-template-core-0.0.1.jar</systemPath>
+            <systemPath>${project.basedir}/../MybatisTemplate/target/mybatis-template-core-0.0.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
