--- a/MybatisTemplateStarter/pom.xml
+++ b/MybatisTemplateStarter/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>mybatis-template</groupId>
     <artifactId>mybatis-template-starter</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.5</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -24,6 +24,10 @@
             <version>1.3.2</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.3</version>
@@ -31,9 +35,8 @@
         <dependency>
             <groupId>mybatis-template</groupId>
             <artifactId>mybatis-template-core</artifactId>
-            <version>0.0.4</version>
+            <version>0.0.7</version>
         </dependency>
-
 
 
         <dependency>
@@ -67,8 +70,13 @@
             <scope>test</scope>
         </dependency>
 
-    </dependencies>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
