--- a/MybatisTemplateSpringDemo/pom.xml
+++ b/MybatisTemplateSpringDemo/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>mybatis-template</groupId>
+    <parent>
+        <groupId>mybatis-template</groupId>
+        <artifactId>mybatis-template-parent</artifactId>
+        <version>0.0.10</version>
+    </parent>
+
     <artifactId>mybatis-template-springdemo</artifactId>
     <version>0.0.1</version>
     <properties>
@@ -13,11 +18,6 @@
         <org.springframework.version>3.2.4.RELEASE</org.springframework.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
@@ -29,12 +29,6 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
